0413-2253 주석처리이상한거 제거

--- a/index_map.html
+++ b/index_map.html
@@ -76,7 +76,7 @@
     </style>
 
 
-    /* 현재위치 , 주소로검색 css부분 */
+    <!-- /* 현재위치 , 주소로검색 css부분 */ -->
     <style>
         .menu_for_map {
             margin: 15px 0 10px 10px;
@@ -120,7 +120,7 @@
         }
     </style>
 
-    /* 주소로검색 js부분 */
+    <!-- /* 주소로검색 js부분 */ -->
     <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
     <script>
 
