--- a/header.html
+++ b/header.html
@@ -18,16 +18,7 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css">
-    <script>
-        $(document).ready(function () {
-            var $test = $('#ming');
-            $(window).scroll(function () {
-                if ($(this).scrollTop > 10) {
-                    $test.addClass('scrolled');
-                }
-            });
-        });
-    </script>
+    
 </head>
 
 <body>
@@ -51,13 +42,13 @@
                         <div class="top-end">
                             <ul class="user-login">
                                 <li>
-                                    <a href="login.html">로그인</a>
+                                    <a href="w_login.html">로그인</a>
                                 </li>
                                 <li>
-                                    <a href="register.html">회원가입</a>
+                                    <a href="w_join.html">회원가입</a>
                                 </li>
                                 <li>
-                                    <a href="customer_service.html">고객센터</a>
+                                    <a href="customer.html">고객센터</a>
                                 </li>
                             </ul>
                         </div>
@@ -67,7 +58,7 @@
         </div>
         <!-- End Topbar -->
         <!-- Start Header Middle -->
-        <div class="header-middle">
+        <div class="header-middle" style="height:70px;">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-3 col-7">
@@ -77,18 +68,7 @@
                                 <img src="assets/images/logo/logo_ruda.png" alt="Logo">
                             </a>
                             <!-- End Header Logo -->
-                            <!-- 지도/목록 메뉴 출력 시작-->
-                            <div class="scrollmenu">
-                                <ul>
-                                    <li class="nav-item">
-                                        <a href="index_list.html">리스트로 주문</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="index_map.html">지도로 주문</a>
-                                    </li>
-                                </ul>
-                            </div> <!-- navbar collapse -->
-                            <!-- 지도/목록 메뉴 출력 끝 -->
+                            
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-7 d-xs-none">
@@ -212,7 +192,7 @@
         <!-- End Header Bottom -->
     </header>
     <!-- End Header Area -->
-
+    <div style="height:1000px; "></div>
    
 
     <!-- ========================= scroll-top ========================= -->
