0514-0239 배경변경 및 지도 크기조정

--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
     <title>Walking Order</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo/logo_only.svg" />
+    <link href="assets/images/logo/logo_only.png" rel="icon"/>
 
 
     <!-- ========================= CSS here ========================= -->
@@ -35,18 +35,18 @@
                     <div class="row">
                         <div class="col-lg-2 col-md-4 col-4">
                             <li>
-                                <a href="javascript:void(0)">회사소개</a>
+                                <a href="w_comp_info.html">회사소개</a>
                             </li>
                         </div>
                         <div class="col-lg-2 col-md-4 col-4">
                             <li>
-                                <a href="javascript:void(0)">이용약관</a>
+                                <a href="w_terms_of_service.html">이용약관</a>
                             </li>
                         </div>
 
                         <div class="col-lg-2 col-md-4 col-4">
                             <li>
-                                <a href="javascript:void(0)">개인정보처리방침</a>
+                                <a href="w_personal_info.html">개인정보처리방침</a>
                             </li>
                         </div>
 
@@ -60,14 +60,14 @@
 
                         <div class="col-lg-2 col-md-4 col-4">
                             <li>
-                                <a href="javascript:void(0)">이용안내</a>
+                                <a href="w_guide.html">이용안내</a>
                             </li>
                         </div>
 
                         <div class="col-lg-2 col-md-4 col-4">
                             <div class="lastFooter">
                                 <li>
-                                    <a href="javascript:void(0)">입점문의</a>
+                                    <a href="w_store_inquiry.html">입점문의</a>
                                 </li>
                             </div>
                         </div>
