--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
     <title>Walking Order</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
+    <link href="assets/images/logo/logo_only.png" rel="icon"/>
 
 
     <!-- ========================= CSS here ========================= -->
@@ -68,6 +68,7 @@
                                 <img src="assets/images/logo/logo_ruda.png" alt="Logo">
                             </a>
                             <!-- End Header Logo -->
+
                             
                         </div>
                     </div>
@@ -192,7 +193,7 @@
         <!-- End Header Bottom -->
     </header>
     <!-- End Header Area -->
-    <div style="height:1000px; "></div>
+   
    
 
     <!-- ========================= scroll-top ========================= -->
@@ -201,7 +202,7 @@
     </a>
 
     <!-- ========================= JS here ========================= -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap5.min.js"></script>
     <script src="assets/js/tiny-slider.js"></script>
     <script src="assets/js/glightbox.min.js"></script>
     <script src="assets/js/main.js"></script>
