--- a/index_map.html
+++ b/index_map.html
@@ -7,7 +7,7 @@
     <title>Walking Order</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo/logo_only.svg" />
+    <link href="assets/images/logo/logo_only.png" rel="icon"/>
 
 
     <!-- ========================= CSS here ========================= -->
@@ -228,10 +228,10 @@
 
 
         <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12" style="margin: 10px;">
+            <div class="col-lg-6 col-md-6 col-sm-12" >
                 <!-- * 카카오맵 - 지도퍼가기 -->
                 <!-- 1. 지도 노드 -->
-                <div id="daumRoughmapContainer1649752833849" class="root_daum_roughmap root_daum_roughmap_landing">
+                <div id="daumRoughmapContainer1649752833849" class="root_daum_roughmap root_daum_roughmap_landing rounded-lg" >
                 </div>
 
                 <!--
@@ -246,22 +246,18 @@
                     new daum.roughmap.Lander({
                         "timestamp": "1649752833849",
                         "key": "29tay",
-                        "mapWidth": "600",
+                        "mapWidth": "100%",
                         "mapHeight": "600"
                     }).render();
                 </script>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-12" style="margin: 10px;">
+            <div class="col-lg-6 col-md-6 col-sm-12" >
 
 
-                <div style="overflow:auto; width:750px; height:660px;">
-
-
-
-
-                    <div class="card mb-3" style="width: 700px; height: 140px;">
-                        <div class="row g-0" style="width: 700px; height: 140px;">
+                <div style="overflow:auto; height:630px;">
+                    <div class="card mb-3" style=" height: 140px;">
+                        <div class="row g-0" style=" height: 140px;">
                             <div class="col-md-4" style="height: 140px; width: 140px;">
                                 <img src="assets/images/product/discount/pd-5.jpg" class="img-fluid rounded-start"
                                     alt="..." style="height: 140px; width: 140px;">
@@ -287,7 +283,7 @@
                     </div>
 
                     <div class="card mb-3" style="max-width: 700px; max-height: 140px;">
-                        <div class="row g-0" style="width: 700px; height: 140px;">
+                        <div class="row g-0" style=" height: 140px;">
                             <div class="col-md-4" style="height: 140px; width: 140px;">
                                 <img src="assets/images/product/discount/pd-5.jpg" class="img-fluid rounded-start"
                                     alt="..." style="height: 140px; width: 140px;">
@@ -312,7 +308,7 @@
                         </div>
                     </div>
                     <div class="card mb-3" style="max-width: 700px; max-height: 140px;">
-                        <div class="row g-0" style="width: 700px; height: 140px;">
+                        <div class="row g-0" style=" height: 140px;">
                             <div class="col-md-4" style="height: 140px; width: 140px;">
                                 <img src="assets/images/product/discount/pd-5.jpg" class="img-fluid rounded-start"
                                     alt="..." style="height: 140px; width: 140px;">
@@ -337,7 +333,7 @@
                         </div>
                     </div>
                     <div class="card mb-3" style="max-width: 700px; max-height: 140px;">
-                        <div class="row g-0" style="width: 700px; height: 140px;">
+                        <div class="row g-0" style=" height: 140px;">
                             <div class="col-md-4" style="height: 140px; width: 140px;">
                                 <img src="assets/images/product/discount/pd-5.jpg" class="img-fluid rounded-start"
                                     alt="..." style="height: 140px; width: 140px;">
@@ -362,7 +358,7 @@
                         </div>
                     </div>
                     <div class="card mb-3" style="max-width: 700px; max-height: 140px;">
-                        <div class="row g-0" style="width: 700px; height: 140px;">
+                        <div class="row g-0" style=" height: 140px;">
                             <div class="col-md-4" style="height: 140px; width: 140px;">
                                 <img src="assets/images/product/discount/pd-5.jpg" class="img-fluid rounded-start"
                                     alt="..." style="height: 140px; width: 140px;">
@@ -387,7 +383,7 @@
                         </div>
                     </div>
                     <div class="card mb-3" style="max-width: 700px; max-height: 140px;">
-                        <div class="row g-0" style="width: 700px; height: 140px;">
+                        <div class="row g-0" style=" height: 140px;">
                             <div class="col-md-4" style="height: 140px; width: 140px;">
 
                                 <img src="assets/images/product/discount/pd-5.jpg" class="img-fluid rounded-start"
