--- a/w_terms_of_service.html
+++ b/w_terms_of_service.html
@@ -7,7 +7,7 @@
     <title>Walking Order</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
+    <link href="assets/images/logo/logo_only.png" rel="icon"/>
 
 
     <!-- ========================= CSS here ========================= -->
@@ -51,7 +51,7 @@
     <style>
         .container-md {
             width: 250px;
-            height: 350px;
+            height: 550px;
             overflow:scroll; 
             overflow-x:hidden
         }
@@ -68,7 +68,7 @@
         }
 
         .container-md::-webkit-scrollbar-track {
-            background-color: #AFFFEE;
+            background-color: #c2c2c2;
             border-radius: 10px;
             box-shadow: inset 0px 0px 5px white;
         }
@@ -133,13 +133,13 @@
                     <br><br><br>
                 </li>
                 <li class="p-2">
-                    <a name="a5" class="fw-bold text-center fs-1 mb-4 text-warning">여러분의 개인정보를 소중히 보호합니다.</a>
+                    <a name="a5" class="fw-bold text-center fs-3 mb-4 text-warning">여러분의 개인정보를 소중히 보호합니다.</a>
                     <p class="fw-bold fs-4 p-1 mb-3">네이버는 서비스의 원활한 제공을 위하여 회원이 동의한 목적과 범위 내에서만 개인정보를 수집.이용하며, 개인정보 보호 관련 법령에 따라 안전하게 관리합니다. 네이버가 이용자 및 회원에 대해 관련 개인정보를 안전하게 처리하기 위하여 기울이는 노력이나 기타 상세한 사항은 개인정보 처리방침에서 확인하실 수 있습니다.</p>
                     <p class="fw-bold fs-4 p-1 mb-3">네이버는 여러분이 서비스를 이용하기 위해 일정 기간 동안 로그인 혹은 접속한 기록이 없는 경우, 전자메일, 서비스 내 알림 또는 기타 적절한 전자적 수단을 통해 사전에 안내해 드린 후 여러분의 정보를 파기하거나 분리 보관할 수 있으며, 만약 이로 인해 서비스 제공을 위해 필수적인 정보가 부족해질 경우 부득이 관련 서비스 이용계약을 해지할 수 있습니다.</p>
                     <br><br><br>
                 </li>
                 <li class="p-2">
-                    <a name="a6" class="fw-bold text-center fs-1 mb-4 text-warning">타인의 권리를 존중해 주세요.</a>
+                    <a name="a6" class="fw-bold text-center fs-3 mb-4 text-warning">타인의 권리를 존중해 주세요.</a>
                     <p class="fw-bold fs-4 p-1 mb-3">여러분이 무심코 게재한 게시물로 인해 타인의 저작권이 침해되거나 명예훼손 등 권리 침해가 발생할 수 있습니다. 네이버는 이에 대한 문제 해결을 위해 ‘정보통신망 이용촉진 및 정보보호 등에 관한 법률’ 및 ‘저작권법’ 등을 근거로 권리침해 주장자의 요청에 따른 게시물 게시중단, 원 게시자의 이의신청에 따른 해당 게시물 게시 재개 등을 내용으로 하는 게시중단요청서비스를 운영하고 있습니다. 보다 상세한 내용 및 절차는 고객센터 내 게시중단요청서비스 소개를 참고해 주세요.</p>
                     <p class="fw-bold fs-4 p-1 mb-3">한편, 네이버 서비스를 통해 타인의 콘텐츠를 이용한다고 하여 여러분이 해당 콘텐츠에 대한 지식재산권을 보유하게 되는 것은 아닙니다. 여러분이 해당 콘텐츠를 자유롭게 이용하기 위해서는 그 이용이 저작권법 등 관련 법률에 따라 허용되는 범위 내에 있거나, 해당 콘텐츠의 지식재산권자로부터 별도의 이용 허락을 받아야 하므로 각별한 주의가 필요합니다.</p>
                     <p class="fw-bold fs-4 p-1 mb-3">네이버는 여러분이 네이버 서비스를 마음껏 이용할 수 있도록 여러분께 네이버 서비스에 수반되는 관련 소프트웨어 사용에 관한 이용 권한을 부여합니다. 이 경우 여러분의 자유로운 이용은 네이버가 제시하는 이용 조건에 부합하는 범위 내에서만 허용되고, 이러한 권한은 양도가 불가능하며, 비독점적 조건 및 법적고지가 적용된다는 점을 유의해 주세요.</p>
