--- a/mypage_mypoint.html
+++ b/mypage_mypoint.html
@@ -8,7 +8,7 @@
     <title>Walking Order</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
+    <link href="assets/images/logo/logo_only.png" rel="icon"/>
 
     
     <!-- ========================= CSS here ========================= -->
