0414-0420 코끼 페이지 수정

--- a/w_guide.html
+++ b/w_guide.html
@@ -10,34 +10,12 @@
     <link href="assets/images/logo/logo_only.png" rel="icon"/>
 
 
-    <!-- ========================= CSS here ========================= -->
-    <link rel="stylesheet" href="assets/css/bootstrap5.min.css" />
-    <link rel="stylesheet" href="assets/css/LineIcons.3.0.css" />
-    <link rel="stylesheet" href="assets/css/tiny-slider.css" />
-    <link rel="stylesheet" href="assets/css/glightbox.min.css" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+     <!-- ========================= CSS here ========================= -->
+     <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
 
-    <!-- 합쳐지고 최소화된 최신 CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
-    <!-- 부가적인 테마 -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css    ">
-
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css">
+     <!-- ========================= JS here ========================= -->
+     <script src="assets/js/jquery-3.6.0.js"></script>
     
-
-    <!-- ========================= JS here ========================= -->
-    <script src="assets/js/jquery-3.6.0.js"></script>
-    <script src="assets/js/main_1.js"></script>
     <script type="text/javascript">
         jQuery(document).ready(function () {
             $('#headers').load("header.html");
@@ -61,7 +39,7 @@
     
 
     <div class="container m-5 p-5">
-        <p class="fw-bold text-center fs-1 p_mb">이용 안내</p>
+        <h3 class="text-center mt-50 mb-50" style="color:#6f6f6f">이용 안내</h3>
         <br><br><br>
         <div class="row justify-content-md-center mr-5 ml-5 pr-5 pl-5">
             <img src="assets/images/product/product-8.jpg" class="rounded float-start col-sm-3 mb-5">
