--- a/w_comp_info.html
+++ b/w_comp_info.html
@@ -10,34 +10,12 @@
     <link href="assets/images/logo/logo_only.png" rel="icon"/>
 
 
-    <!-- ========================= CSS here ========================= -->
-    <link rel="stylesheet" href="assets/css/bootstrap5.min.css" />
-    <link rel="stylesheet" href="assets/css/LineIcons.3.0.css" />
-    <link rel="stylesheet" href="assets/css/tiny-slider.css" />
-    <link rel="stylesheet" href="assets/css/glightbox.min.css" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+     <!-- ========================= CSS here ========================= -->
+     <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
 
-    <!-- 합쳐지고 최소화된 최신 CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
-    <!-- 부가적인 테마 -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css    ">
-
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css">
+     <!-- ========================= JS here ========================= -->
+     <script src="assets/js/jquery-3.6.0.js"></script>
     
-
-    <!-- ========================= JS here ========================= -->
-    <script src="assets/js/jquery-3.6.0.js"></script>
-    <script src="assets/js/main_1.js"></script>
     <script type="text/javascript">
         jQuery(document).ready(function () {
             $('#headers').load("header.html");
@@ -58,10 +36,12 @@
     <div id="headers"></div>
 
     <!-- https://www.navercorp.com/naver/company -->
+    <div class="col-lg-12">
+        <h3 class="text-center mt-50 mb-50" style="color:#6f6f6f">워킹오더</h3>
+    </div>
     <div>
-        <div class="m-5 p-5">
-            <p class="fw-bold text-center fs-1 p_mb">워킹오더</p>
-            <p class="text-center fs-3">페이타랩은 다양한 프랜차이즈 카페 및 개인 카페 브랜드의 주문을 한 곳에서 할 수 있는 커피주문앱, 패스오더를 만드는 팀이에요!<br>
+        <div class="container m-5 p-5 mb-40">
+            <p class="text-center" style="font-size: 18px;">페이타랩은 다양한 프랜차이즈 카페 및 개인 카페 브랜드의 주문을 한 곳에서 할 수 있는 커피주문앱, 패스오더를 만드는 팀이에요!<br>
                 우리는 대형 프랜차이즈에서만 가능했던 스마트오더 시스템을 중소형 프랜차이즈 카페 및 개인 카페까지 가능하도록 만들었고,<br>
                 현재는 자체 오더 시스템을 갖고 있던 대형 프랜차이즈에서도 입점할 만큼 놀라운 속도로 성장하고 있어요!<br>
                 자신의 분야에서 탁월한 실력을 갖고 있는 동료들이 있었기에 이런 성과를 이뤄낼 수 있었다고 생각해요.<br>
@@ -77,23 +57,23 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td class="fw-bold table-warning col-md-3 p-4">설립연도</td>
+                    <td class="table-warning col-md-3 p-4" style="font-weight: 700;">설립연도</td>
                     <td class="p-4">2022년 3월</td>
                 </tr>
                 <tr>
-                    <td class="fw-bold table-warning col-md-3 p-4">본사 위치</td>
+                    <td class="table-warning col-md-3 p-4" style="font-weight: 700;">본사 위치</td>
                     <td class="p-4">허리가 가늘군 만지면 부러지리</td>
                 </tr>
                 <tr>
-                    <td class="fw-bold table-warning col-md-3 p-4">주요서비스</td>
+                    <td class="table-warning col-md-3 p-4" style="font-weight: 700;">주요서비스</td>
                     <td class="p-4">편의제공</td>
                 </tr>
                 <tr>
-                    <td class="fw-bold table-warning col-md-3 p-4">주요사업</td>
+                    <td class="table-warning col-md-3 p-4" style="font-weight: 700;">주요사업</td>
                     <td class="p-4">커피판매</td>
                 </tr>
                 <tr>
-                    <td class="fw-bold table-warning col-md-3 p-4">가맹점</td>
+                    <td class="table-warning col-md-3 p-4" style="font-weight: 700;">가맹점</td>
                     <td class="p-4">설명</td>
                 </tr>
                 </tbody>
