--- a/index_list.html
+++ b/index_list.html
@@ -23,14 +23,9 @@
 
 <body>
 
-    <!-- Preloader -->
-    <div class="preloader">
-        <div class="preloader-inner">
-            <div class="preloader-icon">
-                <span></span>
-                <span></span>
-            </div>
-        </div>
+    <!-- Page Preloder -->
+    <div id="preloder">
+        <div class="loader"></div>
     </div>
     <!-- /End Preloader -->
 
