--- a/jw4.html
+++ b/jw4.html
@@ -71,8 +71,8 @@
     <div id="headers"></div>
 
     <!-- Shoping Cart Section Begin -->
-    <section class="shoping-cart spad">
-        <div class="container">
+    <section class="shoping-cart spad" style="padding:0;">
+        <div class="container" style="padding:40px 15px;background-color: white;">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="shoping__cart__table">
