--- a/header.html
+++ b/header.html
@@ -91,7 +91,7 @@
                                     <input type="text" placeholder="검색">
                                 </div>
                                 <div class="search-btn">
-                                    <button><i class="lni lni-search-alt"></i></button>
+                                    <button onclick="location.href='jw1.html'"><i class="lni lni-search-alt"></i></button>
                                 </div>
                             </div>
                             <!-- navbar search Ends -->
