--- a/jw1.html
+++ b/jw1.html
@@ -26,7 +26,7 @@
 
     <!-- ========================= JS here ========================= -->
     <script src="assets/js/jquery-3.6.0.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main_1.js"></script>
     <script type="text/javascript">
         jQuery(document).ready(function () {
             $('#headers').load("header.html");
